Fixed project names were word wrapped

--- a/public_html/components/todolist/components/projects-list/style.css
+++ b/public_html/components/todolist/components/projects-list/style.css
@@ -22,6 +22,7 @@
     max-width: 100%;
     height: 20px;
     overflow: hidden;
+    white-space: nowrap;
     float: left;
 }
 
